--- a/example/www/index.html
+++ b/example/www/index.html
@@ -30,6 +30,8 @@
         </summary>
         <h2> Energy </h2>
         <p>
+            <input type="button" value="Analog/Digital Meter" onclick="anyline.energy.scan('AUTO_ANALOG_DIGITAL_METER')"/>
+            <br/>
             <input type="button" value="Analog Meter" onclick="anyline.energy.scan('ANALOG_METER')"/>
             <br/>
             <input type="button" value="Digital Meter" onclick="anyline.energy.scan('DIGITAL_METER')"/>
