--- a/example/www/index.html
+++ b/example/www/index.html
@@ -8,7 +8,7 @@
 <html>
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
@@ -21,66 +21,77 @@
 </head>
 
 <body>
-<h1>Anyline Cordova</h1>
+    <h1>Anyline Cordova</h1>
 
-<div id="navigation">
-    <details id="details_scan_modes" open>
-        <summary class="summary1">
-            Scan Modes
-        </summary>
-        <h2> Energy </h2>
-        <p>
-            <input type="button" value="Analog/Digital Meter" onclick="anyline.energy.scan('AUTO_ANALOG_DIGITAL_METER')"/>
-            <br/>
-            <input type="button" value="Analog Meter" onclick="anyline.energy.scan('ANALOG_METER')"/>
-            <br/>
-            <input type="button" value="Digital Meter" onclick="anyline.energy.scan('DIGITAL_METER')"/>
-            <br/>
-            <input type="button" value="Heat Meter" onclick="anyline.energy.scanHeatMeterWithSegment()"/>
-            <br/>
-            <input type="button" value="Electric Meter" onclick="anyline.energy.scanElectricDigitalSegment()"/>
-            <br/>
+    <div id="navigation">
+        <details id="details_scan_modes" open>
+            <summary class="summary1">
+                Scan Modes
+            </summary>
+            <h2> Energy </h2>
+            <p>
+                <input type="button" value="Analog/Digital Meter" onclick="anyline.energy.scan('AUTO_ANALOG_DIGITAL_METER')" />
+                <br/>
+                <input type="button" value="Analog Meter" onclick="anyline.energy.scan('ANALOG_METER')" />
+                <br/>
+                <input type="button" value="Digital Meter" onclick="anyline.energy.scan('DIGITAL_METER')" />
+                <br/>
+                <input type="button" value="Heat Meter" onclick="anyline.energy.scanHeatMeterWithSegment()" />
+                <br/>
+                <input type="button" value="Electric Meter" onclick="anyline.energy.scanElectricDigitalSegment()" />
+                <br/>
+                <hr>
+                <h2>Anyline OCR</h2>
+                <p>
+                    <input type="button" value="IBAN" onclick="anyline.ocr.scanIban()" />
+                    <br/>
+                    <input type="button" value="Anyline Voucher Codes" onclick="anyline.ocr.scanAnylineVoucherCodes()" />
+                </p>
+                <hr>
+                <h2> Vehicles </h2>
+                <p>
+                    <input type="button" value="License Plates Alpha" onclick="anyline.licensePlate.scanLicensePlates('LICENSE_PLATE')" />
+                    <br/>
+                    <input type="button" value="License Plates Austria Alpha" onclick="anyline.licensePlate.scanLicensePlates('LICENSE_PLATE_AUSTRIA')" />
+                    <br/>
+                    <input type="button" value="License Plates Germany Alpha" onclick="anyline.licensePlate.scanLicensePlates('LICENSE_PLATE_GERMANY')" />
+                    <br/>
+                </p>
+                <hr>
+                <h2> Others </h2>
+                <p>
+                    <input type="button" value="Barcode" onclick="anyline.barcode.scan()" />
+                    <br/>
+                    <input type="button" value="MRZ of Passport or ID" onclick="anyline.mrz.scan()" />
+                    <br/>
+                    <input type="button" value="Document" onclick="anyline.document.scan()" />
+                    <br/>
+                </p>
+        </details>
+
+
         <hr>
-        <h2>Anyline OCR</h2>
-        <p>
-            <input type="button" value="IBAN" onclick="anyline.ocr.scanIban()"/>
-            <br/>
-            <input type="button" value="Anyline Voucher Codes" onclick="anyline.ocr.scanAnylineVoucherCodes()"/>
-        </p>
-        <hr>
-        <h2> Others </h2>
-        <p>
-            <input type="button" value="Barcode" onclick="anyline.barcode.scan()"/>
-            <br/>
-            <input type="button" value="MRZ of Passport or ID" onclick="anyline.mrz.scan()"/>
-            <br/>
-            <input type="button" value="Document" onclick="anyline.document.scan()"/>
-            <br/>
-        </p>
-    </details>
+        <details id="details_results">
+            <summary class="summary1">
+                Results
+            </summary>
+            <p>
+                <div id="results">
+
+                </div>
+            </p>
+        </details>
 
 
-    <hr>
-    <details id="details_results">
-        <summary class="summary1">
-            Results
-        </summary>
-        <p>
-        <div id="results">
+    </div>
 
-        </div>
-        </p>
-    </details>
-
-
-</div>
-
-<script type="text/javascript" src="cordova.js"></script>
-<script type="text/javascript" src="js/anyline.barcode.js"></script>
-<script type="text/javascript" src="js/anyline.energy.js"></script>
-<script type="text/javascript" src="js/anyline.mrz.js"></script>
-<script type="text/javascript" src="js/anyline.ocr.js"></script>
-<script type="text/javascript" src="js/anyline.document.js"></script>
+    <script type="text/javascript" src="cordova.js"></script>
+    <script type="text/javascript" src="js/anyline.barcode.js"></script>
+    <script type="text/javascript" src="js/anyline.energy.js"></script>
+    <script type="text/javascript" src="js/anyline.mrz.js"></script>
+    <script type="text/javascript" src="js/anyline.ocr.js"></script>
+    <script type="text/javascript" src="js/anyline.document.js"></script>
+    <script type="text/javascript" src="js/anyline.licensePlate.js"></script>
 </body>
 
 </html>
