--- a/example/www/index.html
+++ b/example/www/index.html
@@ -52,9 +52,9 @@
                 <p>
                     <input type="button" value="License Plates Alpha" onclick="anyline.licensePlate.scanLicensePlates('LICENSE_PLATE')" />
                     <br/>
-                    <input type="button" value="License Plates Austria Alpha" onclick="anyline.licensePlate.scanLicensePlates('LICENSE_PLATE_AUSTRIA')" />
+                    <input type="button" value="License Plates AUT Alpha" onclick="anyline.licensePlate.scanLicensePlates('LICENSE_PLATE_AUSTRIA')" />
                     <br/>
-                    <input type="button" value="License Plates Germany Alpha" onclick="anyline.licensePlate.scanLicensePlates('LICENSE_PLATE_GERMANY')" />
+                    <input type="button" value="License Plates GER Alpha" onclick="anyline.licensePlate.scanLicensePlates('LICENSE_PLATE_GERMANY')" />
                     <br/>
                 </p>
                 <hr>
