added Dial Meter

--- a/example/www/index.html
+++ b/example/www/index.html
@@ -40,6 +40,8 @@
                 <br/>
                 <input type="button" value="Electric Meter" onclick="anyline.energy.scanElectricDigitalSegment()" />
                 <br/>
+                <input type="button" value="Dial Meter ALPHA" onclick="anyline.energy.scan('DIAL_METER')" />
+                <br/>
                 <hr>
                 <h2>Anyline OCR</h2>
                 <p>
