--- a/example/www/index.html
+++ b/example/www/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="stylesheet" type="text/css" href="css/anyline.css">
     <title>Anyline Cordova Example</title>
-
+    <script type="application/javascript">localStorage.setItem("hasStartedAnyline", false);</script>
 </head>
 
 <body>
