--- a/example/www/index.html
+++ b/example/www/index.html
@@ -36,6 +36,8 @@
                 <br/>
                 <input type="button" value="Digital Meter" onclick="anyline.energy.scan('DIGITAL_METER')" />
                 <br/>
+                <input type="button" value="Serial Number" onclick="anyline.energy.scan('SERIAL_NUMBER')" />
+                <br/>
                 <input type="button" value="Heat Meter" onclick="anyline.energy.scanHeatMeterWithSegment()" />
                 <br/>
                 <input type="button" value="Dial Meter ALPHA" onclick="anyline.energy.scan('DIAL_METER')" />
@@ -50,11 +52,7 @@
                 <hr>
                 <h2> Vehicles </h2>
                 <p>
-                    <input type="button" value="License Plates Alpha" onclick="anyline.licensePlate.scanLicensePlates('LICENSE_PLATE')" />
-                    <br/>
-                    <input type="button" value="License Plates AUT Alpha" onclick="anyline.licensePlate.scanLicensePlates('LICENSE_PLATE_AUSTRIA')" />
-                    <br/>
-                    <input type="button" value="License Plates GER Alpha" onclick="anyline.licensePlate.scanLicensePlates('LICENSE_PLATE_GERMANY')" />
+                    <input type="button" value="License Plates" onclick="anyline.licensePlate.scanLicensePlates('LICENSE_PLATE')" />
                     <br/>
                 </p>
                 <hr>
