--- a/example/www/index.html
+++ b/example/www/index.html
@@ -42,6 +42,8 @@
             <br/>
             <input type="button" value="Dial Meter ALPHA" onclick="anyline.energy.scan('DIAL_METER')" />
             <br/>
+            <input type="button" value="Dot Matrix Meter" onclick="anyline.energy.scan('DOT_MATRIX_METER')" />
+            <br/>
         <hr>
         <h2>Anyline OCR</h2>
         <p>
