added Vin Scanner optimized setLanguages in OCR

--- a/example/www/index.html
+++ b/example/www/index.html
@@ -52,6 +52,8 @@
             <input type="button" value="Anyline Voucher Codes" onclick="anyline.ocr.scanAnylineVoucherCodes()" />
             <br/>
             <input type="button" value="Austrian Driving License" onclick="anyline.drivingLicense.scan()" />
+            <br/>
+            <input type="button" value="Vehicle Identification Number" onclick="anyline.vin.scan()" />
         </p>
         <hr>
         <h2> Vehicles </h2>
@@ -95,6 +97,7 @@
 <script type="text/javascript" src="js/anyline.drivingLicense.js"></script>
 <script type="text/javascript" src="js/anyline.document.js"></script>
 <script type="text/javascript" src="js/anyline.licensePlate.js"></script>
+<script type="text/javascript" src="js/anyline.vin.js"></script>
 </body>
 
 </html>
