updated vin.ale and vin.any. Update vin uiconfig and energy ui config. Updated gradle and cocoapods to 3.22

--- a/example/www/index.html
+++ b/example/www/index.html
@@ -53,7 +53,7 @@
             <br/>
             <input type="button" value="Austrian Driving License" onclick="anyline.drivingLicense.scan()" />
             <br/>
-            <input type="button" value="Vehicle Identification Number" onclick="anyline.vin.scan()" />
+            <input type="button" value="Vehicle Identification Nb." onclick="anyline.vin.scan()" />
         </p>
         <hr>
         <h2> Vehicles </h2>
