added PostProcessing and License Check

--- a/example/www/index.html
+++ b/example/www/index.html
@@ -71,6 +71,11 @@
             <input type="button" value="Document" onclick="anyline.document.scan()" />
             <br/>
         </p>
+        <h2> LicenseCheck </h2>
+        <p>
+            <input type="button" value="License" onclick="anyline.barcode.check()" />
+            <br/>
+        </p>
     </details>
 
 
