added Universal Serial Number new Date object in MRZ SDK 3.25

--- a/example/www/index.html
+++ b/example/www/index.html
@@ -54,6 +54,8 @@
             <input type="button" value="Austrian Driving License" onclick="anyline.drivingLicense.scan()" />
             <br/>
             <input type="button" value="Vehicle Identification Nb." onclick="anyline.vin.scan()" />
+            <br/>
+            <input type="button" value="Universal Serial Number" onclick="anyline.usnr.scan()" />
         </p>
         <hr>
         <h2> Vehicles </h2>
@@ -98,6 +100,7 @@
 <script type="text/javascript" src="js/anyline.document.js"></script>
 <script type="text/javascript" src="js/anyline.licensePlate.js"></script>
 <script type="text/javascript" src="js/anyline.vin.js"></script>
+<script type="text/javascript" src="js/anyline.usnr.js"></script>
 </body>
 
 </html>
