added Versions to Example

--- a/example/www/index.html
+++ b/example/www/index.html
@@ -87,11 +87,18 @@
         </div>
         </p>
     </details>
-
-
+    <hr>
+    <div id="versions">
+        <div id="SDK">
+        </div>
+        <div>
+            <p>Cordova Build Version: 1</p>
+        </div>
+    </div>
 </div>
 
 <script type="text/javascript" src="cordova.js"></script>
+<script type="text/javascript" src="js/anyline.general.js"></script>
 <script type="text/javascript" src="js/anyline.barcode.js"></script>
 <script type="text/javascript" src="js/anyline.energy.js"></script>
 <script type="text/javascript" src="js/anyline.mrz.js"></script>
