changed button title for driving License

--- a/example/www/index.html
+++ b/example/www/index.html
@@ -49,7 +49,7 @@
             <br/>
             <input type="button" value="Anyline Voucher Codes" onclick="anyline.ocr.scanAnylineVoucherCodes()" />
             <br/>
-            <input type="button" value="Austrian Driving License" onclick="anyline.drivingLicense.scan()" />
+            <input type="button" value="AUT/GER Driving License" onclick="anyline.drivingLicense.scan()" />
             <br/>
         </p>
         <hr>
