--- a/example/www/index.html
+++ b/example/www/index.html
@@ -48,6 +48,8 @@
                 <br />
                 <input type="button" value="MRZ of Passport or ID" onclick="anyline.mrz.scan()" />
                 <br />
+                <input type="button" value="German ID Front" onclick="anyline.germanIdFront.scan()" />
+                <br />
                 <p>
                 </p>
                 <h2>Anyline OCR</h2>
@@ -80,6 +82,8 @@
                     <input type="button" value="Barcode" onclick="anyline.barcode.scan()" />
                     <br />
                     <input type="button" value="Document" onclick="anyline.document.scan()" />
+                    <br />
+                    <input type="button" value="Cow Tags" onclick="anyline.ocr.scanCowTag()" />
                     <br />
                 </p>
         </details>
@@ -118,6 +122,7 @@
     <script type="text/javascript" src="js/anyline.vin.js"></script>
     <script type="text/javascript" src="js/anyline.usnr.js"></script>
     <script type="text/javascript" src="js/anyline.container.js"></script>
+    <script type="text/javascript" src="js/anyline.germanIDFront.js"></script>
 </body>
 
 </html>
