changed name, cow -> cattle

--- a/example/www/index.html
+++ b/example/www/index.html
@@ -83,7 +83,7 @@
                     <br />
                     <input type="button" value="Document" onclick="anyline.document.scan()" />
                     <br />
-                    <input type="button" value="Cow Tags" onclick="anyline.ocr.scanCowTag()" />
+                    <input type="button" value="Cattle Tag" onclick="anyline.ocr.scanCattleTag()" />
                     <br />
                 </p>
         </details>
