fixed container config

--- a/example/www/index.html
+++ b/example/www/index.html
@@ -67,7 +67,7 @@
                 <input type="button" value="German ID Front" onclick="anyline.germanIdFront.scan()"
                     class="formButton" disabled=true/>
                 <br />
-                <input type="button" value="German ID Front" onclick="anyline.barcode.scan('pdf417')"
+                <input type="button" value="Barcode PDF417" onclick="anyline.barcode.scan('pdf417')"
                     class="formButton" disabled=true/>
                 <p>
                 </p>
