--- a/example/www/index.html
+++ b/example/www/index.html
@@ -59,7 +59,13 @@
                 <br />
                 <hr>
                 <h2>ID</h2>
-                <input type="button" value="AUT/GER Driving License" onclick="anyline.drivingLicense.scan()"
+                <input type="button" value="AT/DE/UK Driving License" onclick="anyline.drivingLicense.scan()"
+                    class="formButton" disabled=true/>
+                <br />
+                <input type="button" value="NL Driving License" onclick="anyline.drivingLicense.NL.scan()"
+                    class="formButton" disabled=true/>
+                <br />
+                <input type="button" value="BE Driving License" onclick="anyline.drivingLicense.BE.scan()"
                     class="formButton" disabled=true/>
                 <br />
                 <input type="button" value="MRZ of Passport or ID" onclick="anyline.mrz.scan()" class="formButton" disabled=true/>
@@ -109,6 +115,8 @@
                     <br />
                     <input type="button" value="Cattle Tag" onclick="anyline.ocr.scanCattleTag()" class="formButton" disabled=true/>
                     <br />
+                    <input type="button" value="Serial Scanning" onclick="anyline.serialScan.scan()" class="formButton" disabled=true/>
+                    <br />
                 </p>
         </details>
 
@@ -141,12 +149,15 @@
     <script type="text/javascript" src="js/anyline.mrz.js"></script>
     <script type="text/javascript" src="js/anyline.ocr.js"></script>
     <script type="text/javascript" src="js/anyline.drivingLicense.js"></script>
+    <script type="text/javascript" src="js/anyline.drivingLicense.NL.js"></script>
+    <script type="text/javascript" src="js/anyline.drivingLicense.BE.js"></script>
     <script type="text/javascript" src="js/anyline.document.js"></script>
     <script type="text/javascript" src="js/anyline.licensePlate.js"></script>
     <script type="text/javascript" src="js/anyline.vin.js"></script>
     <script type="text/javascript" src="js/anyline.usnr.js"></script>
     <script type="text/javascript" src="js/anyline.container.js"></script>
     <script type="text/javascript" src="js/anyline.germanIDFront.js"></script>
+    <script type="text/javascript" src="js/anyline.serialScan.js"></script>
 </body>
 
 </html>
