--- a/example/www/index.html
+++ b/example/www/index.html
@@ -91,6 +91,9 @@
                 <input type="button" value="License Plates"
                 onclick="anyline.licensePlate.scanLicensePlates('LICENSE_PLATE')" class="formButton" disabled=true/>
                 <br />
+                    <input type="button" value="Tire Identification Nb."
+                           onclick="anyline.ocr.scanTin()" class="formButton" disabled=true/>
+                    <br />
                 </p>
                 
                 <hr>
